--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Smart Release Planner — MVP (Upload Version)</title>
+  <title>Smart Release Planner — MVP (Upload + Full Plan)</title>
   <style>
     :root { color-scheme: dark; }
     body { margin:0; background:#0f172a; color:#e5e7eb; font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif; }
@@ -26,6 +26,8 @@
     .title { font-weight:700; }
     .spacer { height:12px; }
     .hidden { display:none; }
+    .tips { margin-top:6px; white-space:pre-wrap; line-height:1.35; }
+    .actions { display:flex; gap:8px; align-items:end; }
   </style>
 </head>
 <body>
@@ -77,45 +79,106 @@
             <div class="title" style="margin-bottom:6px">Най-добри дни за постване</div>
             <ul id="bestDays"></ul>
           </div>
+          <div class="actions">
+            <button class="secondary" id="csvBtn">Експорт CSV</button>
+            <button class="secondary" id="icsBtn">Експорт ICS</button>
+          </div>
         </div>
       </div>
 
       <div class="spacer"></div>
       <div id="eventsGrid" class="grid"></div>
     </div>
+
+    <p class="muted" style="margin-top:10px">MVP демо: локална евристика без външни API. За финал включи OpenAI + Spotify API през Make/Bubble.</p>
   </div>
 
   <script>
+    // ===== Utilities =====
     const sofiaTZ = "Europe/Sofia";
     const fmtBG = (dt)=> new Intl.DateTimeFormat("bg-BG", {dateStyle:"full", timeStyle:"short", timeZone:sofiaTZ}).format(dt);
     const addDays = (d, n)=>{ const x=new Date(d); x.setDate(x.getDate()+n); return x; };
     const atTime = (d, h=18, m=0)=>{ const x=new Date(d); x.setHours(h,m,0,0); return x; };
 
-    function pickBestDate(genre,start,end){
-      const today=new Date();
-      const startDate=new Date(start); const endDate=new Date(end);
-      const result=atTime(addDays(startDate,7),18,0);
-      return {dt:result,reason:`Автоматично избран оптимален ден за ${genre}`};
+    function scoreDays(genre, followers){
+      const base={1:.6,2:.8,3:.7,4:.95,5:.85,6:.4,0:.5};
+      const boost={ pop:{2:.1,4:.15}, hiphop:{5:.15,6:-.1}, indie:{1:.05,2:.1,4:.1}, edm:{5:.15,6:.05}, rnb:{2:.08,4:.12}, rock:{4:.1,5:.08}, trap:{5:.12} };
+      const g=(genre||"").toLowerCase(); const b=boost[g]||{}; const size = (parseInt(followers||0,10)>10000)? .05 : (parseInt(followers||0,10)>2000)? .02 : 0;
+      const out={}; Object.entries(base).forEach(([k,v])=> out[k]=v+(b[k]||0)+size); return out;
+    }
+    function enumerateDates(a,b){ const s=new Date(a), e=new Date(b); s.setHours(0,0,0,0); e.setHours(0,0,0,0); const res=[]; for(let d=new Date(s); d<=e; d.setDate(d.getDate()+1)) res.push(new Date(d)); return res; }
+    function pickBestDateInWindow({genre, followers, startDate, endDate, preferred=[{dow:2,hour:18,minute:0},{dow:4,hour:18,minute:0},{dow:5,hour:12,minute:0}]} ){
+      const runway=7, today=new Date(), minAllowed=addDays(today,runway);
+      const defStart=addDays(today,runway), defEnd=addDays(today,30);
+      const wStart=startDate? new Date(startDate): defStart; const wEnd=endDate? new Date(endDate): defEnd;
+      const from = wStart<minAllowed ? minAllowed : wStart; const to = wEnd; if(to<from) return { dt: atTime(from,18,0), reason:"Коригиран период → първи възможен ден след runway." };
+      const scores=scoreDays(genre, followers); const cand=[]; for(const d of enumerateDates(from,to)){ for(const p of preferred){ if(d.getDay()===p.dow){ cand.push({dt:atTime(d,p.hour,p.minute), score:scores[String(p.dow)]??.5}); } } }
+      if(cand.length){ cand.sort((a,b)=>b.score-a.score); return { dt:cand[0].dt, reason:`Най-висок скоринг в прозореца (${(cand[0].score*100).toFixed(0)}%)` }; }
+      return { dt: atTime(from,18,0), reason:"Липсват предпочитани дни → избран е първият ден 18:00." };
     }
 
+    // ===== Rich Tips =====
+    const tipTeaser = (genre)=>`Видео 10–15 сек с най-силния hook. Кадър 1: close-up/липсинг; Кадър 2: бърз cut към рефрена.\nКапшън: "⚡ Първи поглед към [име] — ако ти хареса, остави ❤️ и пиши коя редица да пусна утре".\nХаштагове: #[жанр] #[mood] + 3 персонални. CTA: "Запази звука" / "Последвай за премиерата".`;
+    const tipPresave = ()=>`Пост + сторита с линк за pre-save (Spotify/Apple). Пинни поста 48ч.\nСтории: Countdown + Question ("Коя е любимата ти реплика от тийзъра?").\nКапшън: "🎯 Помогни на трака да влезе в алгоритъма — pre-save с 1 клик".`;
+    const tipBTS = ()=>`BTS карусел/Shorts: 3–5 кадъра от запис/микс/видео сет.\nСценарий: 1) проблем → 2) решение → 3) емоция.\nКапшън: "Как направихме [hook/синт] — swipe до края за fail кадър".`;
+    const tipCountdown = ()=>`24h до премиерата. Използвай Reminder в YouTube Premiere/IG Story.\nКапшън: "⏳ Утре в [час]: премиера на [име] — настрои напомняне и кажи от къде слушаш".`;
+    const tipRelease = ()=>`Линкове + YouTube Premiere. Закрепи 1-ви коментар: "Коя секунда ти е любима? Остави таймкод".\nSmart link в био; в описанието — ключови думи, ISRC, кредити, контакт.`;
+    const tipLive = ()=>`TikTok/IG Live 20–30 мин: 1) История → 2) първо слушане (hook) → 3) Q&A → 4) акустичен откъс.\nCTA: "Запази в плейлист" / "Прати на приятел".`;
+    const tipPerf = ()=>`Reels/TikTok 20–30 сек (hook). Добави captions и текст върху видео с ключова фраза.\nКапшън: "ако това влезе в главата ти — запази трака". Стартирай #[име]Challenge.`;
+    const tipCollab = ()=>`Колаборация с микроинфлуенсър (5–50k). Дай 3 идеи за дует (танц, реакция, хармония).\nШаблон за DM: "Здрасти [име]! Имам нов трак [жанр], hook на 0:12. Ще ти пратя clean snippet за дует. Искаш ли early access?"`;
+    const tipDJ = ()=>`DJ promo pack: Radio Edit + Club Edit + Instrumental + Cover 3000x3000 + One-sheet PDF.\nИмейл тема: "PROMO: [Artist – Track] (320kbps) — early support". Линк към Dropbox/Drive.`;
+
+    function makePlan(releaseDate, genre){
+      const events=[], rd=releaseDate, g=(genre||"").toLowerCase();
+      const minus=(d,h=10)=>{const x=addDays(rd,-d); x.setHours(h,0,0,0); return x;};
+      const plus =(d,h=11)=>{const x=addDays(rd, d); x.setHours(h,0,0,0); return x;};
+      events.push({when:minus(7,19), title:"Teaser видео (15 сек)", channel:"TikTok/IG Reels", tip:tipTeaser(g)});
+      events.push({when:minus(5,12), title:"Pre-save кампания", channel:"Link in bio", tip:tipPresave()});
+      events.push({when:minus(3,19), title:"Behind-the-scenes", channel:"Stories + YouTube Shorts", tip:tipBTS()});
+      events.push({when:minus(1,18), title:"Кауънтдаун пост", channel:"IG/TikTok", tip:tipCountdown()});
+      events.push({when:rd,         title:"RELEASE", channel:"Spotify/YouTube", tip:tipRelease()});
+      events.push({when:plus(1,12),  title:"Live Q&A", channel:"TikTok Live", tip:tipLive()});
+      events.push({when:plus(3,18),  title:"Performance clip", channel:"IG Reels", tip:tipPerf()});
+      events.push({when:plus(7,18),  title:"Collab пост", channel:"Микроинфлуенсър", tip:tipCollab()});
+      if(["edm","trap"].includes(g)) events.push({when:plus(10,20), title:"DJ promo pack", channel:"Dropbox/Promo mail", tip:tipDJ()});
+      return events.sort((a,b)=>a.when-b.when);
+    }
+
+    function toCSV(events){
+      const header=["Дата","Дейност","Канал","Съвет"].join(",");
+      const rows=events.map(e=>[e.when.toISOString(),e.title,e.channel,e.tip].map(x=>`"${String(x).replaceAll('"','\\"')}"`).join(","));
+      return [header,...rows].join("\n");
+    }
+    function icsForEvents(events, projectName="Smart Release Planner"){
+      const dtStamp=new Date();
+      const fmt=(d)=>`${d.getUTCFullYear()}${String(d.getUTCMonth()+1).padStart(2,"0")}${String(d.getUTCDate()).padStart(2,"0")}T${String(d.getUTCHours()).padStart(2,"0")}${String(d.getUTCMinutes()).padStart(2,"0")}${String(d.getUTCSeconds()).padStart(2,"0")}Z`;
+      const lines=["BEGIN:VCALENDAR","VERSION:2.0","PRODID:-//Smart Release Planner//BG"];
+      events.forEach((e,i)=>{const start=new Date(e.when), end=new Date(start.getTime()+60*60*1000); lines.push("BEGIN:VEVENT",`UID:${i}-${dtStamp.getTime()}@smart-release`, `DTSTAMP:${fmt(dtStamp)}`, `DTSTART:${fmt(start)}`, `DTEND:${fmt(end)}`, `SUMMARY:${e.title} — ${projectName}`, `DESCRIPTION:${e.channel} | ${e.tip}`, "END:VEVENT");});
+      lines.push("END:VCALENDAR");
+      return lines.join("\r\n");
+    }
+    function download(filename, text){ const blob=new Blob([text],{type:"text/plain;charset=utf-8"}); const url=URL.createObjectURL(blob); const a=document.createElement("a"); a.href=url; a.download=filename; a.click(); setTimeout(()=>URL.revokeObjectURL(url),800); }
+
+    // ===== App wiring =====
     const $=(id)=>document.getElementById(id);
+    const resultWrap=$("resultWrap"), recDate=$("recDate"), reason=$("reason"), windowInfo=$("windowInfo"), bestDays=$("bestDays"), eventsGrid=$("eventsGrid");
+
     function setDefaults(){ const s=addDays(new Date(),7).toISOString().slice(0,10); const e=addDays(new Date(),30).toISOString().slice(0,10); $("wstart").value=s; $("wend").value=e; }
 
     $("genBtn").addEventListener("click",()=>{
       if(!$("songFile").files.length){ alert("Моля, качи песен!"); return; }
-      const genre=$("genre").value; const s=$("wstart").value; const e=$("wend").value;
-      const {dt,reason:why}=pickBestDate(genre,s,e);
-      $("recDate").textContent=fmtBG(dt);
-      $("reason").textContent=`Причина: ${why}`;
-      $("windowInfo").textContent=`Период: ${s} → ${e}`;
-      $("bestDays").innerHTML="<li>вторник</li><li>четвъртък</li>";
-      const div=document.createElement('div'); div.className='event'; div.innerHTML=`<div class='muted'>${fmtBG(dt)}</div><div class='title'>RELEASE</div><div class='muted'><b>Канал:</b> Spotify/YouTube</div><div>Публикувай линкове + Premiere в YouTube. Добави CTA в описанието.</div>`;
-      $("eventsGrid").innerHTML=''; $("eventsGrid").appendChild(div);
-      $("resultWrap").classList.remove('hidden');
+      const genre=$("genre").value.trim(); const followers=$("followers").value.trim(); const winStart=$("wstart").value; const winEnd=$("wend").value;
+      const {dt, reason:why}=pickBestDateInWindow({genre, followers, startDate:winStart, endDate:winEnd});
+      const plan=makePlan(dt, genre);
+      recDate.textContent=fmtBG(dt); reason.textContent=`Причина: ${why}`; windowInfo.textContent=`Ограничение на период: ${winStart} → ${winEnd} (≥ 7 дни runway)`;
+      bestDays.innerHTML=""; ["вторник","четвъртък"].forEach(d=>{ const li=document.createElement("li"); li.textContent=d; bestDays.appendChild(li); });
+      eventsGrid.innerHTML=""; plan.forEach(ev=>{ const div=document.createElement("div"); div.className="event"; div.innerHTML=`<div class='muted'>${fmtBG(ev.when)}</div><div class='title' style='margin-top:6px'>${ev.title}</div><div class='muted' style='margin-top:4px'><b>Канал:</b> ${ev.channel}</div><div class='tips'><b>Идеи:</b> ${ev.tip}</div>`; eventsGrid.appendChild(div); });
+      $("csvBtn").onclick=()=>download("release_plan.csv", toCSV(plan));
+      $("icsBtn").onclick=()=>download("release_plan.ics", icsForEvents(plan, "Smart Release Planner"));
+      resultWrap.classList.remove("hidden");
     });
 
     setDefaults();
   </script>
 </body>
 </html>
-
